--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,45 @@
+<!DOCTYPE html>
 <html>
-   <head>
-      <title>KHU's blog</title>
-   </head>
-   <body>
-      <div>
-         <h1><a href="">KHU's blog</a></h1>
-      </div>
-      <div>
-         <p>published: 14.06.2014, 12:14</p>
-         <h2><a href="">My first post</a></h2>
-         <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      </div>
-      <div>
-         <p>published: 14.06.2014, 12:14</p>
-         <h2><a href="">My second post</a></h2>
-         <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
-      </div>
-   </body>
+  <head>
+    <title>자화상 - 운동주</title>
+  </head>
+  <body>
+   <h1>자화상 - 윤동주</h1>
+    <hr style="height: 10px; background-color: gray" />
+    <section>
+      <h2 style="text-align: center;"><자화상></h2>
+      <h3 style="text-align: center; text-decoration: underline;">윤동주</h3>
+      <hr style="height: 1px; width: 50%; background-color: gray" />
+      <div style="height: 20px;"></div>
+      <p>산모퉁이를 돌아 논가 외딴 우물을 홀로 찾아가선 가만히 들여다봅니다</p>
+      <p>우물 속에는 달이 밝고 구름이 흐르고 하늘이 펼치고 파아란 바람이 불고 가을이 있습니다.</p>
+      <p>그리고 한 사나이가 있습니다.</p>
+      <p>어쩐지 그 사나이가 미워져 돌아갑니다.</p>
+      <p>돌아가다 생각하니 그 사나이가 가엾어집니다.</p>
+      <p>도로 가 들여다보니 사나이는 그대로 있습니다.</p>
+      <p>다시 그 사나이가 미워져 돌아갑니다.</p>
+      <p>돌아가다 생각하니 그 사나이가 그리워집니다.</p>
+      <p>우물 속에는 달이 밝고 구름이 흐르고 하늘이 펼치고 파아란 바람이 불고 가을이 있고 추억처럼 사나이가 있습니다.</p>
+    </section>
+    <aside>
+      <h2>운동주 시인의 다른 시</h2>
+      <ul>
+        <li>서시</li>
+        <li>자화상</li>
+        <li>눈오는 지도</li>
+        <li>새로운 길</li>
+        <li>길</li>
+        <li>별 헤는 밤</li>
+        <li>쉽게 쓰여진 시</li>
+        <li>참회록</li>
+        <li>못 자는 밤</li>
+        <li>비오는 밤</li>
+        <li>소낙비</li>
+      </ul>
+    </aside>
+   <hr style="height: 1px; background-color: gray; opacity: 0.5;" />
+    <footer>
+      <p>&copy;웹서비스프로그래밍 &copy;2020</p>
+    </footer>
+  </body>
 </html>
