--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,22 +4,26 @@
 <html>
   <head>
     <title>Web Service Programming Blog</title>
-    <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap-theme.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" />
     <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
   </head>
   <body>
     <div class="page-header">
+      {% if user.is_authenticated %}
+      <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span> </a>
+      {% endif %}
       <h1><a href="">Web Service Programming Blog</a></h1>
     </div>
 
     <div class="content container">
       <div class="row">
-        <div class="col-md-8">
-            {% block content %}
-            {% endblock %}
-        </div>
+        <div class="col-md-8">{% block content %} {% endblock %}</div>
       </div>
     </div>
   </body>
